tests updated for spam protection